--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@
 	margin-top: 50px;
 }
 
+
+.spacer {
+	margin-top: 50px;
+}
+
+.spacer_btm {
+	margin-bottom: 10px;
+}
 body {
 	font-family: "微软雅黑", "Helvetica Neue", Helvetica, Arial, sans-serif;
  	background-color: #f3f2ee;
@@ -9,20 +17,19 @@ body {
  	border-top: 10px solid #8c1018;
 }
 
-h1, h1 a {
+#logo, #logo > a {
 	color: #8c1018;
-	font-size: 72px;
+	font-size: 58px;
+	margin-bottom: 30px;
 }
 
-h2, h2 a {
+.entry_title, .entry_title a {
 	color: #242323;
 	font-size: 26px;
-	margin-top: 40px;
 }
 
-h3 {
+.sidebar_title {
 	font-size: 26px;
-	margin-top: 40px;
 }
 
 a {
@@ -33,8 +40,20 @@ a:hover {
 	color: #8c1018;
 }
 
-.description {
-	margin-top: 30px;
+.description, .description a {
+	margin-top: 0px;
+	font-size: 26px;
+	color: #635959;
+}
+
+
+#navlist li {
+	/*display: inline;*/
+	/*list-style-type: none;*/
+	/*padding-right: 20px;*/
+	/*margin-right: 30px;*/	
+	font-size: 26px;
+	margin-bottom: 15px;
 }
 
 #footer {
